# LuaAdapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
LuaAdapter/Classes/: Class.cpp  Class.hpp  LuaAdapter.hpp  LuaAdapterEnvironment.cpp  LuaAdapterEnvironment.hpp  Namespace.cpp  Namespace.hpp  RegisterImplementation.cpp  RegisterImplementation.hpp  adapter_lua.cpp  adapter_lua.hpp  lua_param.hpp  param_count.hpp  push_to_lua.hpp  return_count.hpp
LuaAdapter/Test/: Test.cpp  Test1.h  construction_destruction.cpp  construction_destruction.h  extends_test.cpp  extends_test.h  main.cpp  simple_test.cpp  simple_test.h  test_center.cpp  test_center.h
LuaAdapter/luaApdaterLuaSrc/: class.lua  luaAdapter.lua  namespace.lua
LuaAdapter/testLuaSrc/: extends_test.lua  main.lua  test_construction_destruction.lua  test_simple_test.lua
lua/lua-5.1.5/src/: lua.hpp
